# random-quote-generator-3829473

./: LICENSE  main.py  pyproject.toml
.github/workflows/: branch.yaml
docs/: conf.py  index.rst
random_quote_generator/: __init__.py  get_quote.py
tests/: test_get_quote.py
